--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -11,7 +11,7 @@
         <div class="page-asider"></div>
 
         <div class="page__wrapp">
-            <div class="page__vswrapp">
+            <div class="page__vswrapp" id="test">
                 {{> static/static}}
                 {{> choose/choose}}
                 {{> footer/footer}}
@@ -24,17 +24,17 @@
                 <button class="popup__btn">Ввод</button>
             </div>
         </div>
-        <script type="text/javascript">
-            function printDiv(divName) {
-                var printContents = document.getElementById(divName).innerHTML;
-                var w = window.open();
-                w.document.write(printContents);
-                w.print();
-                w.close();
-            }
-        </script>
 
+        <script src="static/js/separate-js/html2pdf.bundle.min.js"></script>
         <script src="static/js/main%=hash=%%=min=%.js"></script>
+
+
+        <script type="text/javascript">
+
+
+
+
+        </script>
     </body>
 
 </html>
